--- a/group-info.html
+++ b/group-info.html
@@ -55,6 +55,14 @@
         </div>
         <div class="action-label">Material</div>
       </div>
+
+      <div class="action-wrapper" data-link="#">
+        <div class="action-button">
+          <span class="material-icons">event_note</span>
+        </div>
+        <div class="action-label">Test</div>
+      </div>
+
     </div>
 
     <!-- Members List -->
